<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/th"
    android:orientation="vertical"
    tools:context=".activites.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="3">


        <EditText
            android:id="@+id/viewDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/dated"
            android:inputType="date"
            android:text="@string/date"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="60sp"
        android:textColor="@color/white"
        android:fontFamily="cursive"
        android:text="@string/your_entry"
        android:id="@+id/title"/>

    <!-- Should have a TextEdit with id:header for the entry header -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="3">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/entry"
            android:layout_width="387dp"
            android:layout_height="325dp"
            android:layout_gravity="top"
            android:background="@android:drawable/screen_background_light_transparent"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>


