<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/sunrise"
        android:orientation="vertical"
        tools:context=".activities.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="3">

            <TextView
                android:id="@+id/mainDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_weight="1"
                android:ems="10"
                android:text="@string/date"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/mainTitle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/main_entry_title"
            android:inputType="textPersonName"
            android:orientation="horizontal"
            android:textColor="@color/white"
            android:fontFamily="cursive"
            android:textAlignment="center"
            android:textSize="40sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="3">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mainBody"
                android:layout_width="387dp"
                android:layout_height="336dp"
                android:layout_gravity="top"
                android:background="@android:drawable/screen_background_light_transparent"
                android:hint="@string/enter_blessings_here"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="153dp"
            android:orientation="vertical"
            android:padding="10dp">

            <Button
                android:id="@+id/mainSubmitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:onClick="saveNewEntry"
                android:text="@string/save"
                app:backgroundTint="#6B4F9C" />

            <Button
                android:id="@+id/mainBrowseButton"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:onClick="openBrowseActivity"
                android:text="@string/browse"
                app:backgroundTint="#6B4F9C" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>